# example-orchestrator

./: .env.example  .env.workshop  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  alembic.ini  docker-compose.yml  graphql_federation.py  lint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements-worker.txt  requirements.txt  settings.py  start.sh  tasks.py  wsgi.py
.github/workflows/: check-uv-lock.yaml  ci.yml  docker-compose-test.yml  run-pre-commit.yml  test-migrations.yaml  uv-lock-report.yml
ansible/plays_and_roles/: core_link.json  create_core_link.yaml  create_node.yaml  create_port.yaml  delete_core_link.yaml  node.json
clab/: orch.clab.yml  srlinux01.clab.yaml
clab/configs/: ams-pcore.config  fco-pcore.config  lhr-pcore.config
db/: __init__.py  models.py
docker/embeddings/: README.md  embeddings.env
docker/federation/: router-config.yaml  rover.Dockerfile  supergraph-config.yaml
docker/lso/: Dockerfile  config.json  lso.env
docker/netbox/: Dockerfile  data.json  netbox.env  patch_federation.py
docker/netbox/configuration/: configuration.py
docker/nginx/: nginx.conf
docker/orchestrator/: .bashrc  README.md  entrypoint.sh  entrypoint_worker.sh  is_healthy.py  orchestrator.env
docker/orchestrator-gui/: orchestrator-core-gui.env
docker/orchestrator-ui/: orchestrator-ui.env
docker/overrides/: configuration.md
docker/postgresql/: .gitignore  01-netbox.sql  README.md  init.sql
docker/redis/: redis.env
docs/tests/: e2e.md
etc/netbox/: entrypoint.sh  netbox.env  setup_netbox.sh
etc/postgresql/: init.sql
forms/: types.py
forms/validator/: service_port.py  service_port_tags.py  shared.py  subscription_bandwidth.py  subscription_customer.py  subscription_exclude_subscriptions.py  subscription_id.py  subscription_in_sync.py  subscription_is_port.py  subscription_port_mode.py  subscription_product_id.py  subscription_status.py  subscription_tag.py  vlan_ranges.py
graphql_utils/: __init__.py  federation.py  resolvers.py
migrations/: env.py  helpers.py
migrations/versions/schema/: 2023-10-24_a77227fe5455_create_data_head.py  2023-10-24_c580416cfd12_add_node.py  2023-10-27_a84ca2e5e4db_add_node.py  2023-11-02_c044b0da4126_add_port.py  (+12 more)
products/: __init__.py
products/product_blocks/: core_link.py  core_port.py  node.py  nsistp.py  port.py  sap.py  sn8_nsistp.py  virtual_circuit.py
products/product_types/: __init__.py  core_link.py  l2vpn.py  node.py  nsip2p.py  nsistp.py  port.py  sn8_nsistp.py
products/services/: description.py
services/: lso_client.py  netbox.py
templates/: core_link.yaml  l2vpn.yaml  node.yaml  nsip2p.yaml  nsistp.yaml  port.yaml  report.yaml
tests/e2e/: conftest.py  test_e2e_showcase.py  test_showcase.py
tests/unit_tests/: conftest.py
translations/: en-GB.json
utils/: bootstrap_netbox.py  exceptions.py  singledispatch.py  types.py  wipe_netbox.py
workflows/: __init__.py  shared.py
workflows/core_link/: create_core_link.py  modify_core_link.py  terminate_core_link.py  validate_core_link.py
workflows/l2vpn/: create_l2vpn.py  modify_l2vpn.py  terminate_l2vpn.py  validate_l2vpn.py
workflows/node/: create_node.py  modify_node.py  modify_refresh_interfaces.py  modify_sync_ports.py  terminate_node.py  update_node_interfaces.py  validate_node.py
workflows/nsip2p/: create_nsip2p.py  modify_nsip2p.py  terminate_nsip2p.py  validate_nsip2p.py
workflows/nsistp/: create_nsistp.py  modify_nsistp.py  terminate_nsistp.py  validate_nsistp.py
workflows/port/: create_port.py  modify_port.py  terminate_port.py  validate_port.py
workflows/tasks/: bootstrap_netbox.py  dummy_task.py  e2e_showcase.py  showcase.py  wipe_netbox.py
(+27 files in other folders)
