[project]
name = "example-orchestrator"
version = "0.1.0"
# Python version should match https://github.com/workfloworchestrator/orchestrator-core/blob/main/Dockerfile
requires-python = "==3.13.*"
dependencies = [
  "deepdiff==8.6.2",
  # TODO: Change back to a tagged release (5.0.0rc2) once available
  "orchestrator-core @ git+https://github.com/workfloworchestrator/orchestrator-core.git@fixes-for-5.0.0rc1-part2",
  "pynetbox==7.4.1",
  "rich==13.9.4",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docker/netbox/configuration/**",
]

line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
exclude = [
    "docker/netbox/configuration/**",
]
select = [
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pynso", "pydantic"]
known-first-party = [
    "nwastdlib",
    "oauth2_lib",
    "pydantic_forms",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
